# Polaris-auto-trading-system

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  FINAL_SYSTEM_REPORT.md  LICENSE  NEXT_STEPS.md  README.md  SYSTEM_COMPLETION_SUMMARY.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: development.yml  production.yml
deployments/: docker-compose.prod.yml
deployments/kubernetes/: kafka-cluster.yaml  namespace.yaml  trading-services.yaml
deployments/monitoring/: alertmanager.yml  prometheus.yml
deployments/monitoring/rules/: trading-alerts.yml
libs/core/: Cargo.toml
libs/core/src/: lib.rs
scripts/: build.sh  setup-dev.sh  start-system.sh  test-integration.sh  test-system.sh  test-trading-flow.sh  validate-system.sh
services/compliance-gateway/: Cargo.toml  Dockerfile  sqlx-data.json
services/compliance-gateway/migrations/: 001_initial.sql
services/compliance-gateway/src/: main.rs
services/execution-engine/: Cargo.toml  Dockerfile
services/execution-engine/src/: main.rs
services/firehose_bridge/: Dockerfile  go.mod  go.sum  main.go
services/gateway/: Dockerfile  go.mod  go.sum  main.go
services/llm-agents/: Dockerfile  main.py  requirements.txt
services/llm-agents/agents/: __init__.py  fact_agent.py  reflection_engine.py  risk_agent.py  subjectivity_agent.py
services/llm-agents/utils/: config.py  data_processor.py
services/market-data-handler/: Cargo.toml  Dockerfile
services/market-data-handler/src/: main.rs
services/order-gateway/: Cargo.toml  Dockerfile
services/order-gateway/src/: main.rs
services/order-matching-engine/: Cargo.toml  Dockerfile
services/order-matching-engine/src/: main.rs
services/risk-manager/: Cargo.toml  Dockerfile
services/risk-manager/src/: main.rs
