[package]
name = "polaris-core"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "53.0.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
rdkafka = "0.36"
prometheus = "0.13"
once_cell = "1.19"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
