[package]
name = "risk-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
polaris-core = { path = "../../libs/core" }
tokio = { version = "1.0", features = ["full"] }
rdkafka = "0.36"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
prometheus = "0.13"
once_cell = "1.19"
